fix(multiple): fixes for dark mode (#2040)
* chore: remove unused variable
* chore: fix ordering
* chore: remove obsolete color overrides
* chore: change variant switch to select
* chore: change variant switch to select
* fix: use correct color for select arrow in dark mode
* fix: use correct color for processflow separator
* fix: correctly initialize variant

--- a/src/angular/textarea/textarea/textarea.scss
+++ b/src/angular/textarea/textarea/textarea.scss
@@ -35,13 +35,9 @@
   position: relative;
   float: right;
   background: transparent;
-  color: var(--sbb-color-text);
+  color: var(--sbb-textarea-remaining-chars-color);
   letter-spacing: 0;
   font-size: var(--sbb-font-size-small);
   line-height: 1;
   font-family: var(--sbb-font-roman);
-
-  :where(html.sbb-lean) & {
-    color: var(--sbb-color-metal);
-  }
 }
